k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare-app
  labels:
    name: healthcare-app
    environment: production
    project: healthcare-devkube
